fix incompatible test for jdk <21