@@ -80,8 +80,8 @@ public class ProcessDefinitionImporterTest {
     // then
     verify(manager, times(1)).handleNewProcessDefinitions(new HashSet<>(first));
     verify(manager, times(1))
-        .handleDeletedProcessDefinitions(Set.of(first.getFirst().getVersion()));
-    verify(manager, times(1)).handleNewProcessDefinitions(Set.of(second.getFirst()));
+        .handleDeletedProcessDefinitions(Set.of(first.get(0).getVersion()));
+    verify(manager, times(1)).handleNewProcessDefinitions(Set.of(second.get(0)));
 
     // verify old version was deregistered and no action is taken on the next polling iteration
     importer.scheduleImport();
